[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/Players.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://assets/Camerablock.png" type="Texture" id=3]
[ext_resource path="res://game/timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/textbox.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.2788

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = -6.0
margin_right = 20.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.890196, 0.0156863, 0.0156863, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
texture = ExtResource( 3 )
centered = false

[node name="Timer" parent="CanvasLayer" instance=ExtResource( 4 )]
pause_mode = 2

[node name="Textbox" parent="." instance=ExtResource( 5 )]
pause_mode = 2
visible = false

[node name="Yes" parent="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/VBoxContainer" index="0"]
focus_neighbour_right = NodePath("../No")
focus_next = NodePath("../No")
focus_previous = NodePath("../No")

[node name="Answer1" parent="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions" index="0"]
focus_neighbour_left = NodePath("../Answer2")
focus_neighbour_top = NodePath("../Answer3")
focus_neighbour_right = NodePath("../Answer2")
focus_neighbour_bottom = NodePath("../Answer3")

[node name="Answer2" parent="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions" index="1"]
focus_neighbour_left = NodePath("../Answer1")
focus_neighbour_top = NodePath("../Answer4")
focus_neighbour_right = NodePath("../Answer1")
focus_neighbour_bottom = NodePath("../Answer4")

[node name="Answer3" parent="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions" index="2"]
focus_neighbour_left = NodePath("../Answer4")
focus_neighbour_top = NodePath("../Answer1")
focus_neighbour_right = NodePath("../Answer4")
focus_neighbour_bottom = NodePath("../Answer1")

[node name="Answer4" parent="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions" index="3"]
focus_neighbour_left = NodePath("../Answer3")
focus_neighbour_top = NodePath("../Answer2")
focus_neighbour_right = NodePath("../Answer3")
focus_neighbour_bottom = NodePath("../Answer2")

[node name="Tween" type="Tween" parent="Textbox"]

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="no_Riddle" from="Textbox" to="." method="_on_Textbox_no_Riddle"]
[connection signal="no_chest" from="Textbox" to="." method="_on_Textbox_no_chest"]
[connection signal="yes_Riddle" from="Textbox" to="." method="_on_Textbox_yes_Riddle"]
[connection signal="yes_chest" from="Textbox" to="." method="_on_Textbox_yes_chest"]
[connection signal="pressed" from="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions/Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions/Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions/Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="pressed" from="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/AnswerOptions/Answer4" to="." method="_on_Answer4_pressed"]
[connection signal="pressed" from="Textbox/TextboxCointainer/MarginContainer/HBoxContainer/GotIt" to="." method="_on_GotIt_pressed"]
[connection signal="tween_completed" from="Textbox/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]

[editable path="Textbox"]
